# finetune_cli

./: .coverage  .gitignore  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  PROJECT_STRUCTURE.md  README.md  audit_repo.py  cli_guide  conftest.py  finetune_cli.py  finetune_cli_v1_deprecated.py  finetunecli.py  index.html  llm_finetune_cli.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml  train1000.jsonl
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
ARCHITECTURE/: index.html
ai_integrations/: index.html
api/: index.html
cli/: CONTEXT.md  main.py
configuration/: index.html
core/: config.py  types.py
dashboard/: index.html
distillation_update/: index.html
docs/: ARCHITECTURE.md  README.md  ai_integrations.md  api.md  changelog.md  cli_guide  configuration.md  contributing.md  dashboard.md  distillation_update.md  examples.md  export.md  hub.md  index.md  installation.md  plugin.md  predict.md  resume.md  template.md  training_and_evaluation.md  troubleshooting.md  tui.md  usage.md  vanilla_distillation.md
evaluation/: __init__.py  benchmarker.py  metrics.py
examples/: CONTEXT.md  complete_training_pipeline.py  generate_sample_data.py  index.html  test_data_pipeline.py
export/: index.html
finetune_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
finetunecli/: __init__.py
hub/: index.html
installation/: index.html
models/: loader.py
plugin/: index.html
predict/: index.html
resume/: index.html
search/: search_index.json
site/: 404.html  (+2 more)
(+171 files in other folders)
