[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finetune-cli"
version = "0.1.0"
description = "A modular CLI tool for fine-tuning LLMs"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Abdur Rahman", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "peft>=0.7.0",
    "rouge-score>=0.1.2",
    "huggingface-hub>=0.19.0",
    "tqdm>=4.65.0",
    "pandas>=2.0.0",
    "accelerate>=0.24.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
    "evaluate",
    "typer[all]",
    "bitsandbytes>=0.41.0",
]

[project.scripts]
finetune-cli = "finetunecli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["finetunecli*"]
